--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "serve": "^10.1.2",
     "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "serve": "^10.1.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -36,7 +37,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "serve -s build"
-
   },
   "eslintConfig": {
     "extends": [
