--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "serve": "^10.1.2",
     "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "dev": "react-scripts start",
